Ostateczne poprawk i uzupełnienie tekstów. Nowy diagram przypadków użycia i jego opis.

--- a/main.bib
+++ b/main.bib
@@ -95,3 +95,12 @@
  address = {Birmingham},
  isbn = {978-1-84951-722-5}
 }
+
+@Book{croucher2012node,
+ author = {Croucher, Tom},
+ title = {Node up and running},
+ publisher = {O'Reilly Media},
+ year = {2012},
+ address = {Sebastopol, CA},
+ isbn = {978-1-449-39858-3}
+ }
