--- a/main.tex
+++ b/main.tex
@@ -230,18 +230,18 @@ Projekt praktyczny, stworzony dla celów niniejszej pracy jest znaczną części
 
 JavaScript jest prototypowym obiektowym językiem programowania. Jest to język Internetu, ze względu na to, że jego kod potrafi uruchomić prawie każda przeglądarka internetowa. Po ciężkim okresie, kiedy to został ogólnie przyjęty jako zabawka umożliwiająca tworzenie tzw. wodotrysków na stronach WWW, rozrósł znacząco i dzisiaj jest jednym z najpopularniejszych, a na pewno najsłynniejszym spośród internetowych języków programowania.
 
-Dzisiejszą ,,Dobę Internetu'' pełną technologii AJAX, rozbudowanych klienckich aplikacji internetowych przypominających desktopowe m.in. czytników RSS, aplikacji biurowych, klientów pocztowych, interaktywnych map, programów do obróbki grafiki i wideo etc. do historii odeszły długotrwałe wywołania stron wykonywane przy każdym wejściu użytkownika  w interakcję z przeglądarką. To wszystko możemy zawdzięczać głównie dzięki JavaScriptowi.
+Dzisiejszą ,,Dobę Internetu'' pełną technologii AJAX, rozbudowanych klienckich aplikacji internetowych przypominających desktopowe m.in. czytników RSS, aplikacji biurowych, klientów pocztowych, interaktywnych map, programów do obróbki grafiki i wideo etc. do historii odeszły długotrwałe wywołania stron wykonywane przy każdym wejściu użytkownika  w interakcję z przeglądarką. \cite{stefanov2012javascript}\cite{stefanov2010javascript}\cite{maccaw2012javascript} To wszystko możemy zawdzięczać głównie dzięki JavaScriptowi.
 
 Początkowe wersje interpreterów JavaScript zostały osadzone w jednych z pierwszych wersji przeglądarek Netscape i Internet Explorer. Ta kliencka wersja JavaScriptu pozwala na umieszczanie wykonywalnej zawartości w stronach internetowych, co pozwala na budowanie interakcji z użytkownikiem, to coś więcej niż statyczne strony WWW. Skrypty języka JavaScript odpowiedzialne są za część zachowawczą stron, kiedy to HTML (ang. HyperText Markup Language) opisuje zawartość i strukturę DOM (ang. Document Object Model) oraz treść, a CSS (ang. Cascading Style Sheets) opisuje wygląd tych elementów.
 
 JavaScript jest otwartym standardem, ale standaryzacją tego języka zajmuje się ECMA International (ang. ang. European Computer Manufacturers Association), która na jego podstawie wydała standard języka skryptowego o nazwie ECMAScript, którego już niedługo szósta wersja wprowadzić ma nowe mechanizmy obiektowości, takie jak np. pełnowymiarowe dziedziczenie za pomocą klas (które dzisiaj jest realizowane przez prototypowanie obiektów), modularyzację i hermetyzację (które dzisiaj są realizowane przez zewnętrzne biblioteki wprowadzające tego typu abstrakcje), a także wiele innych usprawnień, które zapewne przyciągną jeszcze większe rzesze programistów na całym świecie.
 
-Obecnie przeglądarki WWW to nie jedyne interpretery w obrębie których możliwe jest uruchomienie kodu JavaScript. Można tworzyć kod do zastosowań po stronie serwera WWW (m.in .NET lub Node.js), skrypty i aplikacje wiersza poleceń CLI (ang. Command Line Interface), aplikacje desktopowe (Node-webkit, Alchemium), aplikacje dla urządzeń przenośnych (m.in Sencha Touch, PhoneGap), aplikacje dla Smart TV (m.in. Mautilus), sterowanie mikrokomputerami takimi jak Raspberry PI (np. pijs.io) i Arduino (np. Johnny-Five, noduino), systemy operacyjne (Firefox OS, Chrome~OS) rozszerzenia aplikacji takich jak Adobe Photoshop, Google Chrome, Mozilla Firefox.
+Obecnie przeglądarki WWW to nie jedyne interpretery w obrębie których możliwe jest uruchomienie kodu JavaScript. Można tworzyć kod do zastosowań po stronie serwera WWW (m.in .NET lub Node.js), skrypty i aplikacje wiersza poleceń CLI (ang. Command Line Interface) \cite{stefanov2012javascript}, aplikacje desktopowe (Node-webkit, Alchemium), aplikacje dla urządzeń przenośnych (m.in Sencha Touch, PhoneGap), aplikacje dla Smart TV (m.in. Mautilus), sterowanie mikrokomputerami takimi jak Raspberry PI (np. pijs.io) i Arduino (np. Johnny-Five, noduino), systemy operacyjne (Firefox OS, Chrome~OS) rozszerzenia aplikacji takich jak Adobe Photoshop, Google Chrome, Mozilla Firefox.
 
 
 \section{Node.js}
 
-Node.js jest stosunkowo nową platformą deweloperską stworzoną przez Ryana Dahla, pozwalającą programistom JavaScript na tworzenie kodu serwerowego o~wysokiej wydajności.
+Node.js jest stosunkowo nową platformą deweloperską stworzoną przez Ryana Dahla, pozwalającą programistom JavaScript na tworzenie kodu serwerowego o~wysokiej wydajności. \cite{means2012node} \cite{powers2012learning}
 
 Dokładniej rzecz ujmując jest to silnik Google V8 z projektu Chromium (Google Chrome) opakowany w taki sposób, aby można było go wykorzystywać jako niezależny interpreter z możliwościami podobnymi do~np.~Ruby, Pythona, PHP itd.
 
@@ -258,14 +258,14 @@ HTML5 WebSocket to technologia zapewniająca kanał komunikacji pomiędzy przegl
 
 Wszystkie nowoczesne przeglądarki wspierają już tą technologię, a Socket.IO jest biblioteką, która pozwala na stosunkowo szybkie tworzenie aplikacji czasu rzeczywistego w przeglądarkach i~aplikacjach mobilnych za pomocą ujednoliconego interfejsu, zacierając przy tym różnice pomiędzy różnymi mechanizmami transportu i interpretacjami twórców oprogramowania.
 
-Węzeł komunikacji w przypadku WebSockets jest w przeciwieństwie do AJAX otwarty na stałe pomiędzy klientem, a serwerem. Jednak dane pomiędzy socketami są przesyłane poprzez HTTP jako obiekty XHR (XMLHttpRequest) podobnie jak w przypadku AJAX'a.
+Węzeł komunikacji w przypadku WebSockets jest w przeciwieństwie do AJAX otwarty na stałe pomiędzy klientem, a serwerem. Jednak dane pomiędzy socketami są przesyłane poprzez HTTP jako obiekty XHR (XMLHttpRequest) podobnie jak w przypadku AJAX'a. \cite{croucher2012node}
 
 
 \section{MongoDB}
 
 MongoDB jest nierelacyjną bazą danych (NoSQL), która przechowuje dane w formacie klucz-wartość o postaci dokumentów JSON, takim samym jak obiekty JavaScript, co sprawia, że nie ma potrzeby konwersji danych podczas odczytu i zapisu danych przez Node.js, dzięki temu wymiana danych jest szybsza niż w przypadku nierelacyjnych danych a komunikacja nie blokuje systemów wejścia/wyjścia.
 
-Dokumenty takie nie wymagają określonej struktury i dane w nich nie są sztywno powiązane relacjami, dzięki czemu są wysoce skalowalne i pozwalają na szybszy rozwój aplikacji dzięki skoncentrowaniu na celu, a nie środkach do jego osiągnięcia.
+Dokumenty takie nie wymagają określonej struktury i dane w nich nie są sztywno powiązane relacjami, dzięki czemu są wysoce skalowalne i pozwalają na szybszy rozwój aplikacji dzięki skoncentrowaniu na celu, a nie środkach do jego osiągnięcia.\cite{chodorow2013mongodb}
 
 \subsubsection{Mongoose}
 
@@ -276,7 +276,7 @@ Istnieje wiele sterowników do MongoDB dla różnych języków programowania. W 
 
 PhoneGap\footnote{http://phonegap.com} jest frameworkiem do budowania aplikacji mobilnych o otwartym kodzie źródłowym stworzonym przez firmę Nitobi, z czasem odsprzedanym do Adobe Systems\footnote{http://www.adobe.com/pl/}, która to nadal czynnie rozwija produkt.
 
-Pozwala na tworzenie aplikacji webowych w technologiach HTML, CSS i Javascript, które po kompilacji za pośrednictwem PhoneGap umożliwiają uruchamianie ich jako natywnych aplikacji wybranego mobilnego systemu operacyjnego. 
+Pozwala na tworzenie aplikacji webowych w technologiach HTML, CSS i Javascript, które po kompilacji za pośrednictwem PhoneGap umożliwiają uruchamianie ich jako natywnych aplikacji wybranego mobilnego systemu operacyjnego. \cite{stark2013android}
 
 Pisząc jeden, uniwersalny kod źródłowy aplikacji można uzyskać pliki instalacyjne dla różnych platform mobilnych. W chwili pisania tego tekstu PhoneGap umożliwia kompilację do natywnych aplikacji dla:
 \begin{itemize}
@@ -683,20 +683,46 @@ Rysunek \ref{fig:Nowy_instruktor} przedstawia ekran z formularzem dodawania nowe
 \label{fig:Nowy_instruktor}
 \end{figure}
 
-\newpage
-Po dodaniu kilku instruktorów lista wygląda tak, jak to przedstawia rysunek \ref{fig:Nowy_instruktor}.
+Pod adresem URL \texttt{http://}\textit{adres\_serwera}\texttt{/instructors\_generate} dostępne jest wywołanie ukrytej funkcji pozwalającej wygenerować przykładowe dane do stworzenia nowego instruktora i dodać go do bazy.
+
+Po dodaniu kilku instruktorów lista wygląda tak, jak to przedstawia rysunek \ref{fig:Lista_instruktorow}.
+
+Z poziomu tej listy można przeglądać zbiór użytkowników. Ich pełne nazwy, loginy i dane kontaktowe takie jak numery telefonów i adresy e-mail, a ostatnia kolumna tabeli zawiera menu akcji do zarządzania tymi encjami.
+
+Możliwe do wykonania akcje to: 
+\begin{itemize}
+\item przejście do widoku szczegółowego dla wybranego instruktora, który zawiera te same informacje, ale tabela w nim jest zawężona tylko do jednego rekordu związanego z tym konkretnym instruktorem (przydatne, gdy jeden z administratorów chce wydobyć link do informacji dotyczących pojedyńczego bytu systemu),
+\item przejście do formularza umożliwiającego edycję danych instruktora,
+\item usunięcie instruktora z bazy danych.
+\end{itemize}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{screenshots/panel/lista_instruktorow.png}
 \caption{Lista dodanych instruktorów}
+\label{fig:Lista_instruktorow}
 \end{figure}
 
 
 \chapter{Klient dla systemu Android - korzystanie}
 
+Autor starał się, aby wykonana aplikacja mobilna była tak intuicyjna, jak to tylko możliwe.
+
+Zamysłem było udostępnienie w interfejsie tylko tych funkcji, które są niezbędne do komunikacji pomiędzy instruktorami.
+
+Lista najbliższych placów wraz z informacjami o ich zajętości to minimum jakie ma spełniać system. Wymiana informacji o zajętości i aktualizacja kolejności placów wg odległości zostały zautomatyzowane tak, aby użytkownicy mogli skupić się na swoich obowiązkach zawodowych, a nie na obsłudze aplikacji.
+
+
+
 \section{Przypadki użycia}
+
 Rysunek \ref{fig:Diagram przypadków użycia} wizualizuje akcje możliwe do wykonania przez użytkowników aplikacji.
+
+Akcje logowania oraz zajmowania i zwalniania placu wykonują zapytania do serwera (aktor - System), który podejmuje kolejne działania w celu wymiany danych.
+
+
+
+Inne akcje, m.in. wyświetlanie list placów i instruktorów oraz ich szczegółów, a także wylogowanie użytkownika, działają lokalnie. Nie wymieniają żadnych danych z zewnętrznym API.
 
 \begin{figure}[H]
 \centering
@@ -704,6 +730,7 @@ Rysunek \ref{fig:Diagram przypadków użycia} wizualizuje akcje możliwe do wyko
 \caption{Ekran logowania użytkownika}
 \label{fig:Diagram przypadków użycia}
 \end{figure}
+
 
 
 \section{Logowanie}
@@ -818,13 +845,13 @@ W niniejszej pracy został przedstawiony opis stworzonego systemu wspomagająceg
 
 Celem pracy było stworzenie aplikacji mobilnej na urządzenia z systemem Android, która umożliwia komunikowanie się z innymi tego typu klientami przez scentralizowany serwer napisany w technologii Node.js.
 
-Napisana w ramach pracy aplikacja umożliwia wymianę informacji o stanach zajętości placów wprowadzonych do systemu pomiędzy klientami, ich odległości względem położenia użytkownika oraz możliwość skontaktowania się z innymi instruktorami przy pomocy wbudowanych funkcji urządzenia.
+Cel udało się osiągnąć. Zrealizowana w ramach pracy aplikacja umożliwia wymianę informacji o stanach zajętości placów wprowadzonych do systemu pomiędzy klientami, ich odległości względem położenia użytkownika oraz możliwość skontaktowania się z innymi instruktorami przy pomocy wbudowanych funkcji urządzenia.
 
 W pracy została przedstawiona architektura systemu, sposób komunikacji wewnątrz niego, instrukcja uruchomienia aplikacji oraz jej używania.
 
 Autor napotkał na wiele trudności, które udało mu się rozwiązać, co zapewniło mu sporą dawkę doświadczenia. Praca pozwoliła autorowi na nauczenie się i zdobycie nowych umiejętności dotyczących tworzenia hybrydowych aplikacji mobilnych w technologiach webowych oraz pisania serwerów API dla nich.
 
-Aplikacja może być w przyszłości rozwijana i wzbogacana o nowe funkcjonalności. Istnieje wiele pomysłów na dalszy rozwój i z pewnością będzie ona nadal rozwijana. Docelowo aplikacja ma stać się konkurencyjnym oprogramowaniem do zarządzania m.in. harmonogramami lekcji nauki jazdy, postępów w nauczaniu konkretnych kursantów i przydzielaniem wyposażenia instruktorów.
+Aplikacja może być w przyszłości rozwijana i wzbogacana o nowe funkcjonalności. Istnieje wiele pomysłów na dalszy rozwój i z pewnością będzie ona nadal rozwijana. Docelowo aplikacja ma stać się konkurencyjnym oprogramowaniem do zarządzania m.in. harmonogramami lekcji nauki jazdy, śledzenia i notowania postępów w nauczaniu konkretnych kursantów oraz przydzielaniem wyposażenia instruktorów.
 
 \backmatter
 
